@@ -101,26 +101,18 @@ Your API key from L<https://cloudinary.com/console>
 
 Your API secret from L<https://cloudinary.com/console>
 
-=head2 api_url
-
-Default is L<http://api.cloudinary.com/v1_1>.
-
 =head2 private_cdn
 
 Your private CDN url from L<https://cloudinary.com/console>.
-
-=head2 public_cdn
-
-Default is L<http://res.cloudinary.com>.
 
 =cut
 
 __PACKAGE__->attr(cloud_name => sub { die 'cloud_name is required in constructor' });
 __PACKAGE__->attr(api_key => sub { die 'api_key is required in constructor' });
 __PACKAGE__->attr(api_secret => sub { die 'api_secret is required in constructor' });
-__PACKAGE__->attr(api_url => sub { 'http://api.cloudinary.com/v1_1' });
 __PACKAGE__->attr(private_cdn => sub { die 'private_cdn is required in constructor' });
-__PACKAGE__->attr(public_cdn => sub { 'http://res.cloudinary.com' });
+__PACKAGE__->attr(_api_url => sub { 'http://api.cloudinary.com/v1_1' });
+__PACKAGE__->attr(_public_cdn => sub { 'http://res.cloudinary.com' });
 __PACKAGE__->attr(_ua => sub {
     my $ua = Mojo::UserAgent->new;
 
@@ -253,7 +245,7 @@ sub destroy {
 
 sub _call_api {
     my($self, $action, $args, $post) = @_;
-    my $url = join '/', $self->api_url, $self->cloud_name, $args->{'resource_type'}, $action;
+    my $url = join '/', $self->_api_url, $self->cloud_name, $args->{'resource_type'}, $action;
     my $on_error = $args->{'on_error'} || sub {};
     my $on_success = $args->{'on_success'};
     my $headers = { 'Content-Type' => 'multipart/form-data' };
@@ -291,7 +283,7 @@ sub _api_sign_request {
     $url_obj = $self->url_for("$public_id.$format", \%args);
 
 This method will return a public URL to the image at L<http://cloudinary.com>.
-It will use L</private_cdn> or L</public_cdn> and L</cloud_name> to construct
+It will use L</private_cdn> or the public CDN and L</cloud_name> to construct
 the URL. The return value is a L<Mojo::URL> object.
 
 Example C<%args>:
@@ -299,7 +291,7 @@ Example C<%args>:
     {
         w => 100, # width of image
         h => 150, # height of image
-        secure => $bool, # use private_cdn or public_cdn
+        secure => $bool, # use private_cdn or public cdn
     }
 
 =cut
@@ -309,7 +301,7 @@ sub url_for {
     my $public_id = shift or die 'Usage: $self->url_for($public_id, ...)';
     my $args = shift || {};
     my $format = $public_id =~ s/\.(\w+)// ? $1 : 'jpg';
-    my $url = Mojo::URL->new(delete $args->{'secure'} ? $self->private_cdn : $self->public_cdn);
+    my $url = Mojo::URL->new(delete $args->{'secure'} ? $self->private_cdn : $self->_public_cdn);
 
     $url->path(join '/', grep { length }
         $self->cloud_name,
